Fixes #10, #11, #12. Add workflow-maven-deploy package; update configuration instructions to use javapoet-maven-plugin id; update to spotless.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
-target/
-.idea/
+.idea/*
+
+!.idea/codeStyles
+.idea/codeStyles/*
+!.idea/codeStyles/codeStyleConfig.xml
+!.idea/codeStyles/Project.xml
+
+!.idea/dictionaries
+.idea/dictionaries/*
+!.idea/dictionaries/dictionary.xml
+
+!.idea/inspectionProfiles
+.idea/inspectionProfiles/*
+!.idea/inspectionProfiles/profiles_settings.xml
+!.idea/inspectionProfiles/Project.xml
+
 *.iml
+
+.DS_Store
+
+target/
+
+.cache/
