--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.drewctaylor</groupId>
     <artifactId>javapoet-maven-plugin</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <prerequisites>
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>com.squareup</groupId>
             <artifactId>javapoet</artifactId>
-            <version>1.12.1</version>
+            <version>1.13.0</version>
         </dependency>
 
         <dependency>
@@ -59,13 +59,37 @@
     </dependencies>
 
     <build>
-
         <plugins>
+            <plugin>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+                <version>2.0.1</version>
+                <configuration>
+                    <java>
+                        <importOrder>
+                            <order>,java,javax,\#</order>
+                        </importOrder>
+                        <removeUnusedImports />
+                        <eclipse>
+                            <version>4.13.0</version>
+                            <file>eclipse-formatter-config.xml</file>
+                        </eclipse>
+                    </java>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>apply</goal>
+                        </goals>
+                        <phase>process-sources</phase>
+                    </execution>
+                </executions>
+            </plugin>
 
             <plugin>
                 <groupId>com.github.ekryd.sortpom</groupId>
                 <artifactId>sortpom-maven-plugin</artifactId>
-                <version>2.11.0</version>
+                <version>2.12.0</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <expandEmptyElements>false</expandEmptyElements>
@@ -84,22 +108,6 @@
                             <goal>sort</goal>
                         </goals>
                         <phase>verify</phase>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>net.revelc.code.formatter</groupId>
-                <artifactId>formatter-maven-plugin</artifactId>
-                <version>2.11.0</version>
-                <configuration>
-                    <configFile>eclipse-formatter-config.xml</configFile>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>format</goal>
-                        </goals>
-                        <phase>process-sources</phase>
                     </execution>
                 </executions>
             </plugin>
@@ -159,7 +167,7 @@
                             <outputDirectory>${project.basedir}</outputDirectory>
                             <resources>
                                 <resource>
-                                    <directory>${project.basedir}/src/main/site/markdown</directory>
+                                    <directory>${project.basedir}/src/main/markdown</directory>
                                     <includes>
                                         <include>README.md</include>
                                     </includes>
@@ -175,7 +183,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.9.0</version>
+                <version>3.9.1</version>
             </plugin>
 
             <plugin>
