--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.drewctaylor</groupId>
     <artifactId>javapoet-maven-plugin</artifactId>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4</version>
     <packaging>maven-plugin</packaging>
 
     <prerequisites>
