--- a/.github/workflows/workflow-maven-deploy.yml
+++ b/.github/workflows/workflow-maven-deploy.yml
@@ -13,11 +13,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Step 2 - Setup Java.
-        uses: actions/setup-java@v1
+        uses: drewctaylor/setup-java@actions-setup-java-85-b
         with:
-          java-version: 1.8
+          java-version: 11
+          server-id-list: github, maven
+          server-username: SERVER_USERNAME
+          server-password: SERVER_PASSWORD
 
       - name: Step 3 - Maven Deploy.
-        run: mvn -B deploy
+        run: mvn -B deploy -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SERVER_USERNAME: ${{ github.actor }}
+          SERVER_PASSWORD: ${{ github.token }}
