--- a/.github/workflows/workflow-maven-install.yml
+++ b/.github/workflows/workflow-maven-install.yml
@@ -1,8 +1,8 @@
-name: "workflow-maven-deploy"
+name: "workflow-maven-install"
 
 on:
   push:
-    branches:
+    branches-ignore:
       - "[0-9]+.[0-9]+.[0-9]+"
       - "[0-9]+.[0-9]+.[0-9]+-SNAPSHOT"
 
@@ -22,15 +22,9 @@ jobs:
           server-id: "ossrh"
           server-username: "SERVER_USERNAME"
           server-password: "SERVER_PASSWORD"
-          gpg-private-key: "${{ secrets.GPG_PRIVATE_KEY }}"
-          gpg-passphrase: "GPG_PASSPHRASE"
 
-      - name: "Step 3 - Maven Deploy."
-        run: "mvn -B deploy -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=error"
+      - name: "Step 3 - Maven Install."
+        run: "mvn -B install -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=error -Dgpg.skip"
         env:
           SERVER_USERNAME: "${{ secrets.OSSRH_USERNAME }}"
           SERVER_PASSWORD: "${{ secrets.OSSRH_PASSWORD }}"
-          GPG_PASSPHRASE: "${{ secrets.GPG_PASSPHRASE }}"
-
-      - name: "Step 4 - CodeCov."
-        uses: "codecov/codecov-action@v3"
